[package]
name = "microui-femtovg"
version = "0.1.0"
edition = "2021"

[features]
default = ["microui-app/default"]
x11 = ["microui-app/x11"]
wayland = ["microui-app/wayland"]

[dependencies]
microui-app = { path = "../microui-app" }
femtovg = { version = "0.3.7", default-features = false }
glutin = "0.28.0"
