[package]
name = "microui-femtovg"
version = "0.1.0"
edition = "2021"

[features]
default = ["microui-app/default"]
x11 = ["microui-app/x11"]
wayland = ["microui-app/wayland"]

[dependencies]
microui-app = { path = "../microui-app" }
femtovg = { version = "0.6.0", default-features = false }
glutin = "0.30.3"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"
